assets/css/om15.css
@CHARSET "UTF-8";

.container {
	margin-top: 0px;
}

.item {
	height: 200px;
	float: none;
}

/* basic styling overrides */
a {
	color: #6b6f9b;
}

a:hover {
	color: #8b91cd;
}

.navbar .btn-navbar .icon-bar {
	border: none;
	background-color: #33374F;
	box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
}

@media (max-width: 767px) {
	body.om15 {
		padding-left: 0;
		padding-right: 0;
	}

	.om15 .container {
		padding-left: 20px;
		padding-right: 20px;
	}
}

@media (min-width: 767px) {
	.item {
		max-width: 570px;
		float: left;
	}
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
	display: none !important;
}

.om-navbar .container {
	width: 940px;
}

.om-navbar .container {
	width: 940px;
}

@media (min-width: 1200px) {
	.om-navbar .container {
		width: 1170px;
	}
}

@media (min-width: 768px) and (max-width: 979px) {
	.om-navbar .container {
		width: 724px;
	}
}

.om-navbar .navbar-inner {
	background: none;
	border: none;
	border-radius: 0;

	background-color: #33374F;
	text-transform: uppercase;
	color: #F7FAFB;
}

.navbar .brand,
.om-navbar .nav > li > a {
	color: #F7FAFB;
	text-shadow: none;
	letter-spacing: 1px;
	font-weight: bold;
	font-size: 12px;
}

.navbar a.brand:hover,
.om-navbar .nav > li > a:hover {
	/*
	color: #e1e4e5;
	background-color: #3f435d;
	*/
	background-color: #CABFC4;
	color: #000000;
}

body {
	background-color: #CABFC4;
}

.page-head {
	background-color: #fff;
	width: 100%;
	height: 250px;
}

.page-head img {
	height: 100%;
	margin-left: auto;
	margin-right: auto;
	display: block;
}

.social-media-icons {
	font-size: 1.5em;
	padding-top: 20px;
	padding-right: 10px;
}

.page-head .social-media-icons {
	position: absolute;
	right: 20px;
	top: 20px
}

.social-media-icons ul {
	list-style: none;
}

.social-media-icons li {
	float: left;
	padding-right: 5px;
}

.social-media-icons a {
	text-decoration: none;
}

.social-media-icons .twitter {
	color: #45A3DB;
}

.social-media-icons .facebook {
	color: #5066A4;
}

.social-media-icons .gplus {
	color: #CF483B;
}

#footer {
	background-color: #33374F;
	height: 120px;
}

#footer .social-media-icons {
	margin-top: 10px;
	margin-left: auto;
	margin-right: auto;
	width: 10em;
}

/* quote and image container */
.side-container {
	margin-top: -20px;
}

@media (max-width: 768px) {
	.side-container {
		margin-top: 0;
	}
}

.side-container img {
	width: 100%;
}

.side-container .quote {
	min-height: 500px;
	background-color: white;
}

.side-container .quote .blackbox {
	position: relative;
	top: 70px;
	left: 60px;
	background-color: black;
	height: 12px;
	width: 80%;
}

.side-container blockquote {
	font-style: italic;
	font-size: 2em;
	line-height: 1.3em;
	border: none;
	padding: 0 8% 0 18%;
	margin-top: 100px;
}

.index-text p {
	padding-right: 25px;
}

